tests/integration/fixtures/sample_org/objects/Territory__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Text</type>
    <length>2</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>