tests/integration/fixtures/sample_org/objects/Territory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Default Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories</relationshipName>
</CustomField>