tests/integration/fixtures/sample_org/objects/Territory__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <label>Queue Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>